--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 
-chat/zarf/*
+zarf/*
 
 # Binaries for programs and plugins
 *.exe
